--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Muhammad Abu Rizal</title>
+  <title>Muhammad Abuu Rizall</title>
   <meta name="description" content="Muhammad Abu Rizal, fresh graduate jurusan Sistem Informasi. Keahlian: SAP ABAP, Fullstack WordPress, Web Apps, Flutter Mobile Developer, Robotic.">
   <meta name="keywords" content="Muhammad Abu Rizal, Portfolio, SAP ABAP Developer, Wordpress Developer, Web Developer, Flutter Mobile Developer, Robotic">
   <meta name="author" content="Muhammad Abu Rizal">
@@ -109,7 +109,7 @@
   <div class="loading">
     <div class="loader"></div>
     <img src="assets/img/logo.png" alt="Abu Rizal">
-    <span class="position-absolute bottom-0 pb-4">My Portfolio</span>
+    <span class="position-absolute bottom-0 pb-4">My Portfolioo</span>
   </div>
 
   <main>
