--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Muhammad Abu Rizal</title>
+  <title>Muhammadd Abu Rizal</title>
   <meta name="description" content="Muhammad Abu Rizal, fresh graduate jurusan Sistem Informasi. Keahlian: SAP ABAP, Fullstack WordPress, Web Apps, Flutter Mobile Developer, Robotic.">
   <meta name="keywords" content="Muhammad Abu Rizal, Portfolio, SAP ABAP Developer, Wordpress Developer, Web Developer, Flutter Mobile Developer, Robotic">
   <meta name="author" content="Muhammad Abu Rizal">
