--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Muhammad Abu Rizal</title>
+  <title>Muhammad Abu Rizal | Website Portofolio</title>
   <meta name="description" content="Muhammad Abu Rizal, fresh graduate jurusan Sistem Informasi. Keahlian: SAP ABAP, Fullstack WordPress, Web Apps, Flutter Mobile Developer, Robotic.">
   <meta name="keywords" content="Muhammad Abu Rizal, Portfolio, SAP ABAP Developer, Wordpress Developer, Web Developer, Flutter Mobile Developer, Robotic">
   <meta name="author" content="Muhammad Abu Rizal">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://aburizal.github.io">
+  <link rel="canonical" href="https://abuuurizal.github.io">
 
 
   <!-- CSS BOOTSTRAP 5.3.0 -->
@@ -42,7 +42,7 @@
 
         <div class="col d-flex align-items-center py-md-0 py-2">
           <a style="top: 27px;" class="col-lg-5 col-md-6 col d-md-none d-inline-block position-absolute start-50 translate-middle navbar-brand fs-3 navbrand d-flex align-items-center justify-content-md-start justify-content-center order-md-1 order-2" href="#home">
-            <img src="assets/img/logo.png" alt="Logo" width="70" height="25" class="py-0 my-0">
+            <img src="assets/img/logo.png" alt="Logo Rizal" width="70" height="25" class="py-0 my-0">
           </a>
           
           <!-- switch toggle -->
@@ -108,7 +108,7 @@
 
   <div class="loading">
     <div class="loader"></div>
-    <img src="assets/img/logo.png" alt="Abu Rizal">
+    <img src="assets/img/logo.png" alt="Logo Rizal">
     <span class="position-absolute bottom-0 pb-4">My Portfolio</span>
   </div>
 
@@ -599,7 +599,7 @@
               <h6 class="experience-tag py-2 px-2 border-bottom border-end border-secondary text-light position-absolute top-0 rounded-bottom-3 rounded-start-0">
                 Operator Produksi</h6>
               <div class="d-flex justify-content-center pb-0 mb-0">
-                <img class="my-3 mt-4" width="120px" src="assets/img/logo-ahm.png" alt="PT Astra Honda Motor" />
+                <img class="my-3 mt-4" width="120px" src="assets/img/logo-ahm.png" alt="Logo PT Astra Honda Motor" />
               </div>
               <h6 class="experience-list">PT Astra Honda Motor</h6>
               <p class="experience-list py-0 mt-0 mb-1">March 2020 - September 2024</p>
@@ -629,7 +629,7 @@
               <h6 class="experience-tag py-2 px-2 border-bottom border-end border-secondary text-light position-absolute top-0 rounded-bottom-3 rounded-start-0">
                 Flutter Developer <i>(internship)</i></h6>
               <div class="d-flex justify-content-center pb-0 mb-0">
-                <img class="my-3" width="135px" src="assets/img/logo-sevenlight.png" alt="SevenLight" />
+                <img class="my-3" width="135px" src="assets/img/logo-sevenlight.png" alt="Logo SevenLight" />
               </div>
               <h6 class="experience-list">PT Tujuh Cahaya Teknologi</h6>
               <p class="experience-list py-0 mt-0 mb-1">September 2023 - December 2023</p>
@@ -659,7 +659,7 @@
                 Trainer Robotik
               </h6>
               <div class="d-flex justify-content-center pb-0 mb-0">
-                <img class="my-3" width="150px" src="assets/img/logo-roboratory.png" alt="Roboratory Indonesia" />
+                <img class="my-3" width="150px" src="assets/img/logo-roboratory.png" alt="Logo Roboratory Indonesia" />
               </div>
               <h6 class="experience-list">Roboratory Indonesia</h6>
               <p class="experience-list py-0 mt-0 mb-1">August 2018 - August 2019</p>
@@ -730,7 +730,7 @@
 
     <div class="container footer d-md-flex justify-content-md-between align-items-center d-grid justify-content-center pt-4 pb-4">
       <div class="mb-md-0 mb-3 footer-logo">
-        <img src="assets/img/circle-logo.png" alt="Logo" width="50" height="50" class="py-0 my-0">
+        <img src="assets/img/circle-logo.png" alt="Logo Circle" width="50" height="50" class="py-0 my-0">
       </div>
 
       <span class="footer-credit">
