--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
   <title>Muhammad Abu Rizal | Website Portofolio</title>
   <meta name="description" content="Muhammad Abu Rizal, fresh graduate jurusan Sistem Informasi. Keahlian: SAP ABAP, Fullstack WordPress, Web Apps, Flutter Mobile Developer, Robotic.">
+  <link rel="icon" type="image/png" href="/my-favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
+  <link rel="shortcut icon" href="/my-favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+  <link rel="manifest" href="/my-favicon/site.webmanifest" />
   <meta name="keywords" content="Muhammad Abu Rizal, Portfolio, SAP ABAP Developer, Wordpress Developer, Web Developer, Flutter Mobile Developer, Robotic">
   <meta name="author" content="Muhammad Abu Rizal">
   <meta name="robots" content="index, follow">
@@ -31,8 +37,6 @@
 
   <!-- HIGHLIGHT JS THEME -->
   <link rel="stylesheet" href="assets/css/vs2015.css" />
-
-  <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
