--- a/index.html
+++ b/index.html
@@ -304,15 +304,55 @@
       <div class="container">
         <h2 class="project-title text-md-center text-start lh-base px-md-5 px-0 pe-4">Repositori Project</h2>
 
-        <div class="project-menu text-md-center text-start mb-4 pb-3">
+        <!-- <div class="project-menu text-md-center text-start mb-4 pb-3">
           <button type="button" class="btn me-3 rounded mixitup-control-active" data-filter=".php">Wordpress</button>
           <button type="button" class="btn me-3 rounded" data-filter=".sap">SAP ABAP</button>
           <button type="button" class="btn me-3 rounded" data-filter=".web">Web Apps</button>
           <button type="button" class="btn me-3 rounded" data-filter=".design">Web Design</button>
           <button type="button" class="btn me-3 rounded" data-filter=".flutter">Flutter</button>
-        </div>
+        </div> -->
    
         <div id="" class="row project-box justify-content-start mb-3" style="min-height: 200px;">
+
+          <div class="project-wrap php mix col-lg-4 col-sm-6 mb-4">
+            <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
+              <div class="overflow-hidden rounded-top">
+                <img src="assets/img/abap.jpg" class="card-img-top" alt="Tax Document Review">
+              </div>
+              <div class="card-body project-card-body p-0 pt-2 text-start">
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">ALV Report</span>
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">Join Table</span>
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">Export File</span>
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">F4 Help</span>
+                <h3 class="card-title mt-3 mb-1 fs-6">Tax Document Review</h3>
+                <span class="d-block text-end project-card-icon p-2 fs-5">
+                  <a href="#tax-document-review"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </span>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="project-wrap mix php col-lg-4 col-sm-6 mb-4">
+            <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
+              <div class="overflow-hidden rounded-top">
+                <img src="assets/img/web-apps.jpg" class="card-img-top" alt="E-commerce Nilaki">
+              </div>
+              <div class="card-body project-card-body p-0 pt-2 text-start">
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">Bootstrap</span>
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">Codeigniter</span>
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">DomaiNesia</span>
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">iPaymu</span>
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">Raja Ongkir</span>
+                <h3 class="card-title mt-3 mb-1 fs-6">E-commerce Nilaki</h3>
+                <span class="d-block text-end project-card-icon p-2 fs-5">
+                  <a href="#web-apps"><i
+                      class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </span>
+              </div>
+            </div>
+          </div>
+
 
           <div class="project-wrap mix php col-lg-4 col-sm-6 mb-4">
             <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
@@ -320,7 +360,7 @@
                 <img src="assets/img/wordpress-landing-page.jpg" class="card-img-top" alt="Wordpress Landing Page">
               </div>
               <div class="card-body project-card-body p-0 pt-2 text-start">
-                <!-- <span class="badge project-card-badge bg-secondary bg-opacity-10">Bootstrap</span> -->
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">Wordpress</span>
                 <h3 class="card-title mt-3 mb-1 fs-6">Website Landing Page</h3>
                 <span class="d-block text-end project-card-icon p-2 fs-5">
                   <a href="#wordpress-landing-page"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -331,7 +371,7 @@
             </div>
           </div>
 
-          <div class="project-wrap mix php col-lg-4 col-sm-6 mb-4">
+          <!-- <div class="project-wrap mix php col-lg-4 col-sm-6 mb-4">
             <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
               <div class="overflow-hidden rounded-top">
                 <img src="assets/img/wordpress-travel.jpg" class="card-img-top" alt="Wordpress Travel">
@@ -385,55 +425,16 @@
                 </span>
               </div>
             </div>
-          </div>
+          </div> -->
 
 
-          <div class="project-wrap sap mix col-lg-4 col-sm-6 mb-4">
-            <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
-              <div class="overflow-hidden rounded-top">
-                <img src="assets/img/abap.jpg" class="card-img-top" alt="Tax Document Review">
-              </div>
-              <div class="card-body project-card-body p-0 pt-2 text-start">
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">ALV Report</span>
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">Join Table</span>
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">Export File</span>
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">F4 Help</span>
-                <h3 class="card-title mt-3 mb-1 fs-6">Tax Document Review</h3>
-                <span class="d-block text-end project-card-icon p-2 fs-5">
-                  <a href="#tax-document-review"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                </span>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="project-wrap mix web col-lg-4 col-sm-6 mb-4">
-            <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
-              <div class="overflow-hidden rounded-top">
-                <img src="assets/img/web-apps.jpg" class="card-img-top" alt="E-commerce Nilaki">
-              </div>
-              <div class="card-body project-card-body p-0 pt-2 text-start">
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">Bootstrap</span>
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">Codeigniter</span>
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">DomaiNesia</span>
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">iPaymu</span>
-                <span class="badge project-card-badge bg-secondary bg-opacity-10">Raja Ongkir</span>
-                <h3 class="card-title mt-3 mb-1 fs-6">E-commerce Nilaki</h3>
-                <span class="d-block text-end project-card-icon p-2 fs-5">
-                  <a href="#web-apps"><i
-                      class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                </span>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="project-wrap mix design col-lg-4 col-sm-6 mb-4">
+          <div class="project-wrap mix php col-lg-4 col-sm-6 mb-4">
             <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
               <div class="overflow-hidden rounded-top">
                 <img src="assets/img/design-1.jpg" class="card-img-top" alt="Mahkota Advertising">
               </div>
               <div class="card-body project-card-body p-0 pt-2 text-start">
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">Web Design</span>
                 <h3 class="card-title mt-3 mb-1 fs-6">Mahkota Advertising</h3>
                 <span class="d-block text-end project-card-icon p-2 fs-5">
                   <a href="#mahkota-advertising"><i
@@ -443,12 +444,13 @@
             </div>
           </div>
 
-          <div class="project-wrap mix design col-lg-4 col-sm-6 mb-4">
+          <div class="project-wrap mix php col-lg-4 col-sm-6 mb-4">
             <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
               <div class="overflow-hidden rounded-top">
                 <img src="assets/img/design-2.jpg" class="card-img-top" alt="Khaizan Qurban">
               </div>
               <div class="card-body project-card-body p-0 pt-2 text-start">
+                <span class="badge project-card-badge bg-secondary bg-opacity-10">Web Design</span>
                 <h3 class="card-title mt-3 mb-1 fs-6">Khaizan Qurban</h3>
                 <span class="d-block text-end project-card-icon p-2 fs-5">
                   <a href="#khaizan-qurban"><i
@@ -458,7 +460,7 @@
             </div>
           </div>
 
-          <div class="project-wrap mix design col-lg-4 col-sm-6 mb-4">
+          <!-- <div class="project-wrap mix design col-lg-4 col-sm-6 mb-4">
             <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
               <div class="overflow-hidden rounded-top">
                 <img src="assets/img/design-3.jpg" class="card-img-top" alt="Sales Merchandiser">
@@ -486,10 +488,10 @@
                 </span>
               </div>
             </div>
-          </div>
+          </div> -->
 
 
-          <div class="project-wrap mix flutter col-lg-4 col-sm-6 mb-4">
+          <div class="project-wrap mix php col-lg-4 col-sm-6 mb-4">
             <div class="card h-100 project-card p-2 rounded-3 shadow-sm">
               <div class="overflow-hidden rounded-top">
                 <img src="assets/img/flutter.jpg" class="card-img-top" alt="Absensi Karyawan">
