--- a/index.html
+++ b/index.html
@@ -364,8 +364,6 @@
                 <h3 class="card-title mt-3 mb-1 fs-6">Website Landing Page</h3>
                 <span class="d-block text-end project-card-icon p-2 fs-5">
                   <a href="#wordpress-landing-page"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                  <a href="#!" target="_blank"><i
-                      class="fa-brands fa-github ms-3"></i></a>
                 </span>
               </div>
             </div>
@@ -437,8 +435,10 @@
                 <span class="badge project-card-badge bg-secondary bg-opacity-10">Web Design</span>
                 <h3 class="card-title mt-3 mb-1 fs-6">Mahkota Advertising</h3>
                 <span class="d-block text-end project-card-icon p-2 fs-5">
-                  <a href="#mahkota-advertising"><i
+                  <a href="https://abuuurizal.github.io/mahkota-web-design/" target="_blank"><i
                       class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                  <a href="https://github.com/abuuurizal/mahkota-web-design" target="_blank"><i
+                      class="fa-brands fa-github ms-3"></i></a>
                 </span>
               </div>
             </div>
