--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
                   <ul class="p-0">
                     <li class="mb-1 ps-1 d-grid text-start list-unstyled">
                       <a class="home-contact-icon pb-2 border-bottom border-secondary"
+                        href="https://github.com/abuuurizal" target="_blank"><i
+                          class="fa-brands fa-github ps-0 p-3"></i>GitHub<span class="vr mx-2"></span><small>github.com/abuuurizal</small></a>
+
+                      <a class="home-contact-icon pb-2 border-bottom border-secondary"
                         href="https://linkedin.com/in/muhammad-abu-rizal/" target="_blank"><i
                           class="fa-brands fa-linkedin ps-0 p-3"></i>LinkedIn<span class="vr mx-2"></span><small>in/muhammad-abu-rizal</small></a>
 
@@ -280,6 +284,19 @@
           <div class="col-lg-4">
             <img class="about-image mb-4 rounded-3" src="assets/img/about.svg" alt="About" />
             <div class="mb-3 d-flex justify-content-sm-center justify-content-start">
+              <a href="https://github.com/abuuurizal" target="_blank" class="text-decoration-none d-flex">
+                <span class="github-profile shadow-sm rounded-start border-end border-secondary py-2 px-3">
+                  <i class="fa-brands fa-github me-1"></i>
+                  <span id="username"></span>
+                </span>
+
+                <span class="github-profile shadow-sm rounded-end py-2 px-3">
+                  <i class="fa-regular fa-file-code me-1"></i>
+                  <span id="repoCount"></span>
+                  <i class="fa-solid fa-star ms-2 me-1 text-warning"></i>
+                  <span id="star"></span>
+                </span>
+              </a>
             </div>
           </div>
 
