--- a/tax-document-review.html
+++ b/tax-document-review.html
@@ -343,7 +343,7 @@
                 <span class="badge project-card-badge bg-secondary bg-opacity-10">F4 Help</span>
                 <h3 class="card-title mt-3 mb-1 fs-6">Tax Document Review</h3>
                 <span class="d-block text-end project-card-icon p-2 fs-5">
-                  <a href="tax-document-review"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                  <a href="#tax-document-review"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </span>
               </div>
             </div>
