--- a/tax-document-review.html
+++ b/tax-document-review.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Muhammad Abu Rizal | Website Portofolio</title>
+  <title>Abu Rizal | Tax Document Review</title>
   <meta name="description" content="Muhammad Abu Rizal, fresh graduate jurusan Sistem Informasi. Keahlian: SAP ABAP, Fullstack WordPress, Web Apps, Flutter Mobile Developer, Robotic.">
   <link rel="icon" type="image/png" href="/my-favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
@@ -17,7 +17,7 @@
   <meta name="keywords" content="Muhammad Abu Rizal, Portfolio, SAP ABAP Developer, Wordpress Developer, Web Developer, Flutter Mobile Developer, Robotic">
   <meta name="author" content="Muhammad Abu Rizal">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://abuuurizal.github.io">
+  <link rel="canonical" href="https://abuuurizal.github.io/tax-document-review">
 
 
   <!-- CSS BOOTSTRAP 5.3.0 -->
